# pony

./: .gitignore  CREDITS.md  Concat.hs  ISSUES  LICENSE  LICENSE.md  Main.hs  PEG_C.txt  PLAN  PLAN.lhs  README.md  Repl.hs  TODO.txt  bootstrap.sh  clang.c  concat  concat.c  concat.pony.c  concat2.pony.c  configure  dlist.c  dlist.h  dlist.pony.c  example.ponyproj  gc.h  hello.pony.c  malloc.pony.c  murder.pony.c  phonebook.c  phonebook.pony.c  pony.cabal  runpony  tests  torture.pony.c
Control/Monad/Crossproduct/: Crossproduct.hs  cross.hs~
Data/: Coproduct.hs
Data/Functor/: Fix.hs
Language/: C.hs  C99.hs  Pony.hs
Language/C/: AST.hs  Declarations.hs  Declarations.hs-boot  Declarators.hs  Expressions.hs  Functions.hs  Lexer.hs  Literals.hs  Miscellany.hs  ParameterizedAST.hs  Parser.hs  Specifiers.hs  Statements.hs  Testing.hs  TopLevel.hs
Language/C/Semantics/: Conversions.hs  Nodes.hs
Language/C99/: AST.hs  ASTPretty.hs  Declarations.hs  Expressions.hs  Functions.hs  Lexer.hs  Literals.hs  Miscellany.hs  ParameterizedAST.hs  Parser.hs  Specifiers.hs  Statements.hs  TopLevel.hs
Language/FiletOFish/: Compile.lhs  Constructs.lhs  Constructs.lhs-boot  Eval.lhs  Expressions.lhs  Expressions.lhs-boot  LICENSE  Main.lhs  Makefile  PureExpressions.lhs  Semantics.lhs  ponynotes.txt
Language/FiletOFish/Constructs/: Arrays.lhs  Conditionals.lhs  Enumerations.lhs  Functions.lhs  References.lhs  Strings.lhs  Structures.lhs  Typedef.lhs  Unions.lhs
Language/FiletOFish/IL/FoF/: Compile.lhs  FoF.lhs  Run.lhs
Language/FiletOFish/IL/Paka/: Builders.lhs  Compile.lhs  Optimizer.lhs  Paka.lhs  Syntax.lhs
Language/FiletOFish/Libbarrelfish/: HasDescendants.lhs  MemToPhys.lhs
Language/FiletOFish/Libc/: Assert.lhs  Printf.lhs
Language/Pony/: CheckMalloc.hs  HelloWorld.hs  Lexer.hs  LogicalShift.hs  MachineSizes.hs  Node.hs  Overture.hs  Parser.hs  Prelude.hs  Rewriting.hs  SeparateDeclarations.hs  StringConcat.hs  Testing.hs  Transformation.hs  Transformations.hs
Language/Pony/PonyC/: ExpressionParser.hs  Lexer.hs
Language/Pony/Transformations/: Sanitizers.hs  Utilities.hs
Language/Pony/Transformations/Predefined/: CheckMalloc.hs  HelloWorld.hs  LogicalShift.hs  PreciseGC.hs  SeparateDeclarations.hs  StringConcat.hs
Language/PonyGrammar/: AST.hs~  Grammar.hs  Grammar.hs~  Grammar.y~  Main  Main.hs  Main.hs~  Parser.hs  Parser.hs~  Parser.info  Parser.y  Parser.y~
Semantics/: C.hs
Semantics/C/: ASG.hs  Conversions.hs  Nodes.hs  Pretty.hs  PrettyPrinter.hs  QuasiQuote.hs  Queries.hs  Reifiable.hs
Semantics/C/ASG/: Arbitrary.hs  Newtypes.hs
Semantics/C/Reifiable/: Instances.hs
Testing/: Examples.hs  Heredoc.hs  Main.hs
Testing/HUnit/: Assembly.hs  Asserts.hs  ControlStatements.hs  DeclarationPrinting.hs  InitializerLists.hs  Lenses.hs  PostfixExpressions.hs  SignalDeclaration.hs  SpaceFreeParsing.hs  Syntax.hs  TypeNames.hs  Typedefs.hs  UtilityFunctions.hs
Testing/QuickCheck/: Constants.hs
Text/: Pretty.hs
documentation/: adding-to-the-AST.md  syntax representation.graffle
etc/: syntactic-AST.hs
examples/: concat.pony.c  hello.pony.c  logicalshift.pony.c  separation.pony.c  torture.pony.c
examples/check-malloc/: CheckMalloc.hs  Main.hs  malloc.pony.c
examples/concat/: Main.hs  concat.pony.c
examples/gc/: dlist.pony.c  list.ponyproj
examples/hello/: Main.hs  hello.pony.c
examples/logical-shift/: Main.hs
examples/precise-gc/: Main.hs  dlist.h
examples/separate-declarations/: Main.hs
lib/Data/: Coproduct.hs
lib/Data/Functor/: Fix.hs
lib/Language/: C99.hs  Pony.hs
lib/Language/C11/: Grammar.hs  Parsing.hs  Pretty.hs  Syntax.hs
lib/Language/C11/Parsing/: Expressions.hs  Literals.hs
lib/Language/C11/Syntax/: Constructs.hs  Declarations.hs  Expressions.hs  Functions.hs  Lens.hs  Literals.hs  Names.hs  Operators.hs  Statements.hs  Types.hs  Variables.hs
lib/Language/C99/: AST.hs  ASTPretty.hs  Declarations.hs  Declarations.hs-boot  Expressions.hs  Expressions.hs-boot  Functions.hs  Internal.hs  Lexer.hs  Literals.hs  Miscellany.hs  Operators.hs  Parser.hs  Pretty.hs  QuasiQuote.hs  Specifiers.hs  Statements.hs  Syntax.hs  TopLevel.hs
lib/Language/C99/Syntax/: Constructs.hs  Expressions.hs  Lens.hs  Literals.hs  Operators.hs  Statements.hs  Types.hs  Variables.hs
lib/Language/Pony/: MachineSizes.hs  Monad.hs  Overture.hs
lib/Language/Pony/Transformations/: Sanitizers.hs
lib/Semantics/: C.hs
lib/Semantics/C/: ASG.hs  Pretty.hs  QuasiQuote.hs  Reifiable.hs
lib/Semantics/C/ASG/: Arbitrary.hs
lib/Semantics/C/Reifiable/: Instances.hs
lib/Text/: Pretty.hs
src/Language/: C99.hs
src/Language/C99/: Declarations.hs  Declarations.hs-boot  Internal.hs  Pretty.hs  Specifiers.hs  Statements.hs
src/Language/Pony/: Testing.hs
test/: Main.hs
test/Testing/HUnit/: Asserts.hs  SignalDeclaration.hs
test/Testing/QuickCheck/: Constants.hs
test/quickcheck/: Constants.hs
