Name:                pony
Version:             0.0.3
Synopsis:            a modular, extensible source transformer for systems programming

Description:         Pony is a tool intended for programmers of low-level systems. Code authors will write code in standard C99, then specify a set of  high-level transformations that they wish to add to their code, such as garbage collection, closures, and new operators. Pony will apply these transformations, ensure that the generated code is correct, and emit C99.

License:             BSD3
License-file:        LICENSE.md
Author:              Patrick Thomson
Maintainer:          thomsonp@gwmail.gwu.edu
Copyright:           (c) 2010-2011 George Washington University

Category:            Language
Build-type:          Configure
Stability:           alpha
tested-with:         GHC


-- Extra files to be distributed with the package, such as examples or
-- a README.
Extra-source-files:  README.md, CREDITS.md, configure

Cabal-version:       >=1.2.3

Executable test
  Main-is:             Testing/Main.hs
  LD-Options:          -w
  Build-depends:       QuickCheck >= 2.3,
                       HUnit == 1.2.2.3,
                       test-framework == 0.3.3,
                       test-framework-quickcheck2 == 0.2.7,
                       test-framework-hunit == 0.2.6

Executable pony
  Main-is:             Main.hs
  LD-Options:          -w
  Extensions:          DeriveDataTypeable,
                       NamedFieldPuns,
                       Rank2Types,
                       FlexibleContexts,
                       TypeSynonymInstances,
                       MultiParamTypeClasses,
                       TypeOperators,
                       FunctionalDependencies,
                       FlexibleInstances
  
  Build-depends:       base >= 4.2 && < 5,
                       cmdargs == 0.6.1, 
                       csv >= 0.1,
                       parsec == 3.1.0, 
                       mtl == 1.1.0.2,
                       ConfigFile == 1.0.6, 
                       language-c == 0.3.2, 
                       syb >= 0.1,
                       process > 1.0,
                       pretty >= 1.0

