Name:                pony
Version:             0.2.0
Synopsis:            a modular, extensible source transformer for systems programming

Description:         Pony is a tool intended for programmers of low-level systems. Code authors will write code in standard C99, then specify a set of  high-level transformations that they wish to add to their code, such as garbage collection, closures, and new operators. Pony will apply these transformations, ensure that the generated code is correct, and emit C99.

License:             BSD3
License-file:        LICENSE.md
Author:              Patrick Thomson
Maintainer:          thomsonp@gwmail.gwu.edu
Copyright:           (c) 2010-2012 George Washington University

Category:            Language
Build-type:          Configure
Stability:           alpha
Tested-with:         GHC
Cabal-version:       >= 1.2.3
Extra-source-files:  README.md, CREDITS.md, configure

Flag tests {
  Description:       Build testing software
  Default:           False
}

Flag examples {
  Description:       Build example programs
  Default:           False
}

Library {
  Build-depends:     base >= 4.2 && < 5
                   , ghc-prim
                   , GenericPretty >= 1.2
                   , mtl >= 2.0.1.0
                   , fixplate >= 0.1.5
                   , parsec >= 3.1.0
                   , pretty >= 1.0
                   , process > 1.0
                   , wl-pprint-extras >= 3.0.0.1
                   , syb >= 0.1
  ghc-options:     -O -Wall -fno-warn-orphans -fno-warn-missing-signatures -fwarn-tabs
  Exposed-modules: Language.Pony, Semantics.C
  Extensions:     DeriveDataTypeable,
                  FlexibleContexts,
                  FlexibleInstances,            
                  FunctionalDependencies,
                  GeneralizedNewtypeDeriving,
                  MultiParamTypeClasses,
                  NamedFieldPuns,
                  Rank2Types,
                  TypeOperators,
                  TypeSynonymInstances
}

-- Executable check-malloc {
--   Main-is: Main.hs
--   Hs-source-dirs: examples/check-malloc .
--   LD-Options: -w
--   if flag(examples) {
--     Buildable: True
--   } else {
--     Buildable: False
--   }
-- }
                   
-- Executable concat {
--   Main-is:  Main.hs
--   Hs-source-dirs: examples/concat .
--   LD-Options:          -w
--   if flag(examples) {
--     Buildable: True
--   } else {
--     Buildable: False
--   }
-- }

Executable hello {
  Main-is:  Main.hs
  Hs-source-dirs: examples/hello .
  LD-Options:          -w
  if flag(examples) {
    Buildable: True
  } else {
    Buildable: False
  }
}

-- Executable logical-shift {
--   Main-is:  Main.hs
--   Hs-source-dirs: examples/logical-shift .
--   LD-Options:          -w
--   if flag(examples) {
--     Buildable: True
--   } else {
--     Buildable: False
--   }
-- }

-- Executable precise-gc {
--   Main-is: Main.hs
--   Hs-source-dirs: examples/precise-gc .
--   LD-Options:          -w
--   if flag(examples) {
--     Buildable: True
--   } else {
--     Buildable: False
--   }
-- }

-- Executable separate-declarations {
--   Main-is: Main.hs
--   Hs-source-dirs: examples/separate-declarations .
--   LD-Options:          -w
--   if flag(examples) {
--     Buildable: True
--   } else {
--     Buildable: False
--   }
-- }

Executable test {
  Main-is:             Testing/Main.hs
  ghc-options:         -O
  LD-Options:          -w
  Build-depends:       QuickCheck >= 2.3,
                       HUnit == 1.2.2.3,
                       test-framework >= 0.6,
                       test-framework-quickcheck2 >= 0.2.7,
                       test-framework-hunit == 0.2.6
  if flag(tests) {
    Buildable: True
  } else {
    Buildable: False
  }
}

